--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
     "hbs": "^4.2.0",
     "jquery": "^3.6.4",
+    "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   },
