--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
     "hbs": "^4.2.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^6.31.0"
+    "sequelize": "^6.31.0",
+    "sweetalert2": "^11.7.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
