--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "hbs": "^4.2.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^6.31.0",
-    "sweetalert2": "^11.7.3"
+    "sequelize": "^6.31.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
